@@ -1,2 +1,15 @@
 # Serveur_jeux
 Un serveur de jeux en Java
+___
+
+V.03.12.00:
+- Début de l'interface
+- Mise en place de l'arborescence
+
+___
+
+Arguments VM :
+
+```
+--module-path="C:\Users\Hale S\eclipse-workspace\javafx-sdk-16\lib" --add-modules=javafx.controls,javafx.fxml
+```
